src/objects/EarnedValueHeader__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Earned Value Report is committed when all the tasks are committed.</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>EarnedValueReport</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportName__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnapshotDate__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <label>Earned Value Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ReportName__c</columns>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>SnapshotDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EVH-{0000000}</displayFormat>
        <label>Earned Value Header Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Earned Value Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>